--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 /* @import "./assets/fonts/iransans/iransans.css"; */
+
+body {
+  font-family: "IRANsans";
+}
